--- a/Sara-Common.nuspec
+++ b/Sara-Common.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/01/nuspec.xsd">
   <metadata>
     <id>Sara-Common</id>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <title>Sara Common C#</title>
     <authors>Sara LaFleur</authors>
     <owners>Sara LaFleur</owners>
@@ -15,19 +15,6 @@
     <tags></tags>
     <license type="file">LICENSE.txt</license>
     <repository type="git" url="https://github.com/saralafleur/Sara-Common.git"/>
-    <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Core" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Data" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Drawing" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.IO.Compression.FileSystem" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Numerics" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Runtime.Serialization" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Xml" targetFramework="net48" />
-      <frameworkAssembly assemblyName="System.Xml.Linq" targetFramework="net48" />
-      <frameworkAssembly assemblyName="PresentationCore" targetFramework="net48" />
-      <frameworkAssembly assemblyName="WindowsBase" targetFramework="net48" />
-    </frameworkAssemblies>
 
     <dependencies>
       <group targetFramework="netstandard2.0">
@@ -40,24 +27,24 @@
   </metadata>
   <files>
     <!-- Sara.NETFramework.Common -->
-    <file src=".NET Framework\Sara.NETFramework.Common\bin\Release\Sara.NETFramework.Common.dll" target="lib\net48" />
-    <file src=".NET Framework\Sara.NETFramework.Common\bin\Release\Sara.NETFramework.Common.pdb" target="lib\net48" />
+    <file src="Sara.Common.Ext\bin\Release\Sara.Common.Ext.dll" target="lib\net48" />
+    <file src="Sara.Common.Ext\bin\Release\Sara.Common.Ext.pdb" target="lib\net48" />
 
     <!-- Sara.NETStandard.Common -->
-    <file src=".NET Standard\Sara.NETStandard.Common\bin\Release\net48\Sara.NETStandard.Common.dll" target="lib\net48" />
-    <file src=".NET Standard\Sara.NETStandard.Common\bin\Release\net48\Sara.NETStandard.Common.pdb" target="lib\net48" />
-    <file src=".NET Standard\Sara.NETStandard.Common\bin\Release\netcoreapp2.2\Sara.NETStandard.Common.dll" target="lib\netcoreapp2.2" />
-    <file src=".NET Standard\Sara.NETStandard.Common\bin\Release\netcoreapp2.2\Sara.NETStandard.Common.pdb" target="lib\netcoreapp2.2" />
-    <file src=".NET Standard\Sara.NETStandard.Common\bin\Release\netstandard2.0\Sara.NETStandard.Common.dll" target="lib\netstandard2.0" />
-    <file src=".NET Standard\Sara.NETStandard.Common\bin\Release\netstandard2.0\Sara.NETStandard.Common.pdb" target="lib\netstandard2.0" />
+    <file src="Sara.Common\bin\Release\net48\Sara.Common.dll" target="lib\net48" />
+    <file src="Sara.Common\bin\Release\net48\Sara.Common.pdb" target="lib\net48" />
+    <file src="Sara.Common\bin\Release\netcoreapp2.2\Sara.Common.dll" target="lib\netcoreapp2.2" />
+    <file src="Sara.Common\bin\Release\netcoreapp2.2\Sara.Common.pdb" target="lib\netcoreapp2.2" />
+    <file src="Sara.Common\bin\Release\netstandard2.0\Sara.Common.dll" target="lib\netstandard2.0" />
+    <file src="Sara.Common\bin\Release\netstandard2.0\Sara.Common.pdb" target="lib\netstandard2.0" />
 
     <!-- Sara.NETStandard.ReadOnlyDictionary -->
-    <file src=".NET Standard\Sara.NETStandard.ReadOnlyDictionary\bin\Release\net48\Sara.NETStandard.ReadOnlyDictionary.dll" target="lib\net48" />
-    <file src=".NET Standard\Sara.NETStandard.ReadOnlyDictionary\bin\Release\net48\Sara.NETStandard.ReadOnlyDictionary.pdb" target="lib\net48" />
-    <file src=".NET Standard\Sara.NETStandard.ReadOnlyDictionary\bin\Release\netcoreapp2.2\Sara.NETStandard.ReadOnlyDictionary.dll" target="lib\netcoreapp2.2" />
-    <file src=".NET Standard\Sara.NETStandard.ReadOnlyDictionary\bin\Release\netcoreapp2.2\Sara.NETStandard.ReadOnlyDictionary.pdb" target="lib\netcoreapp2.2" />
-    <file src=".NET Standard\Sara.NETStandard.ReadOnlyDictionary\bin\Release\netstandard2.0\Sara.NETStandard.ReadOnlyDictionary.dll" target="lib\netstandard2.0" />
-    <file src=".NET Standard\Sara.NETStandard.ReadOnlyDictionary\bin\Release\netstandard2.0\Sara.NETStandard.ReadOnlyDictionary.pdb" target="lib\netstandard2.0" />
+    <file src="Sara.ReadOnlyDictionary\bin\Release\net48\Sara.ReadOnlyDictionary.dll" target="lib\net48" />
+    <file src="Sara.ReadOnlyDictionary\bin\Release\net48\Sara.ReadOnlyDictionary.pdb" target="lib\net48" />
+    <file src="Sara.ReadOnlyDictionary\bin\Release\netcoreapp2.2\Sara.ReadOnlyDictionary.dll" target="lib\netcoreapp2.2" />
+    <file src="Sara.ReadOnlyDictionary\bin\Release\netcoreapp2.2\Sara.ReadOnlyDictionary.pdb" target="lib\netcoreapp2.2" />
+    <file src="Sara.ReadOnlyDictionary\bin\Release\netstandard2.0\Sara.ReadOnlyDictionary.dll" target="lib\netstandard2.0" />
+    <file src="Sara.ReadOnlyDictionary\bin\Release\netstandard2.0\Sara.ReadOnlyDictionary.pdb" target="lib\netstandard2.0" />
 
     <!-- License -->
     <file src="LICENSE.txt" target="" />
