--- a/Sara.Common/Sara.Common.csproj
+++ b/Sara.Common/Sara.Common.csproj
@@ -6,14 +6,14 @@
     <Description></Description>
     <Authors>Sara LaFleur</Authors>
     <Company>Sara</Company>
-    <Copyright>Sara LaFleur, 2019</Copyright>
+    <Copyright></Copyright>
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
-    <Version>1.1.0</Version>
+    <Version>1.2.5</Version>
     <RepositoryType></RepositoryType>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageIconUrl></PackageIconUrl>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <AssemblyVersion>1.2.5.0</AssemblyVersion>
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
